frontend/test/should_pass/array_model_002.gm
node class A
{
	intValue: int;
	stringValue: string;
	intArray: array<int>;
	stringArray: array<string>;
}