frontend/test/should_fail/array_model_001.gm
node class A
{
	intValue: int;
	stringValue: string;
	intArray: array<int>;
	stringArray: array<string>;
	const constIntArray: array<int>;
	const constStringArray: array<string>;
}